[ADD] Add the last changes
